package lld.restaurantreservationsystem;

public enum TableStatus {
    AVAILABLE, RESERVED, OCCUPIED
}
